# ISOBMFF

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ISOBMFF.sln  LICENSE  Makefile  README.md
.github/workflows/: ci-mac.yaml  ci-win.yaml
IBMFF-Example/: IMG.HEIC  main.cpp
IBMFF-Tests/: File.cpp  Parser.cpp
IBMFF.xcodeproj/: project.pbxproj
IBMFF.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
IBMFF.xcodeproj/project.xcworkspace/xcshareddata/: IBMFF.xcscmblueprint
IBMFF.xcodeproj/xcshareddata/xcschemes/: IBMFF-Example.xcscheme  IBMFF.xcscheme
IBMFF/include/IBMFF/: BinaryStream.hpp  Box.hpp  Container.hpp  ContainerBox.hpp  DREF.hpp  FTYP.hpp  File.hpp  FullBox.hpp  HDLR.hpp  HVCC.hpp  IBMFF.hpp  IDAT.hpp  IINF.hpp  ILOC.hpp  INFE.hpp  IREF.hpp  IROT.hpp  ImageGrid.hpp  META.hpp  MVHD.hpp  Matrix.hpp  PITM.hpp  Parser.hpp
IBMFF/source/: BinaryStream.cpp  Box.cpp  Container.cpp  ContainerBox.cpp  DREF.cpp  FTYP.cpp  File.cpp  FullBox.cpp  HDLR.cpp  HVCC-Array-NALUnit.cpp  HVCC-Array.cpp  HVCC.cpp  IDAT.cpp  IINF.cpp  ILOC-Item-Extent.cpp  ILOC-Item.cpp  ILOC.cpp  INFE.cpp  IREF.cpp  IROT.cpp  ImageGrid.cpp  META.cpp  MVHD.cpp  Matrix.cpp  PITM.cpp  Parser.cpp
ISOBMFF/: Info.plist
ISOBMFF-Dump/: main.cpp
ISOBMFF-Example/: main.cpp
ISOBMFF-Tests/: FTYP_unittest.cpp  HDLR_unittest.cpp  META_unittest.cpp  MVHD_unittest.cpp  Parser.cpp  Parser_unittest.cpp  TKHD_unittest.cpp
ISOBMFF.xcodeproj/: project.pbxproj
ISOBMFF.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ISOBMFF.xcodeproj/xcshareddata/xcschemes/: ISOBMFF-Dump.xcscheme  ISOBMFF-Example.xcscheme  ISOBMFF.xcscheme
ISOBMFF/include/: ISOBMFF.hpp
ISOBMFF/include/ISOBMFF/: AV01.hpp  AVC1.hpp  AVCC.hpp  BinaryDataStream.hpp  BinaryFileStream.hpp  BinaryStream.hpp  Box.hpp  CDSC.hpp  COLR.hpp  CTTS.hpp  Casts.hpp  Container.hpp  ContainerBox.hpp  DIMG.hpp  DREF.hpp  DisplayableObject.hpp  DisplayableObjectContainer.hpp  FRMA.hpp  FTYP.hpp  File.hpp  FullBox.hpp  HDLR.hpp  HVC1.hpp  HVCC.hpp  IDAT.hpp  IINF.hpp  ILOC.hpp  INFE.hpp  IPCO.hpp  IPMA.hpp  IREF.hpp  IROT.hpp  ISOBMFF.hpp  ISPE.hpp  ImageGrid.hpp  MDHD.hpp  META.hpp  MP4A.hpp  MVHD.hpp  Macros.hpp  (+15 more)
ISOBMFF/source/: AV01.cpp  AVC1.cpp  AVCC-NALUnit.cpp  AVCC.cpp  BinaryDataStream.cpp  BinaryFileStream.cpp  BinaryStream.cpp  Box.cpp  CDSC.cpp  COLR.cpp  CTTS.cpp  Container.cpp  ContainerBox.cpp  DIMG.cpp  DREF.cpp  DisplayableObject.cpp  DisplayableObjectContainer.cpp  FRMA.cpp  FTYP.cpp  File.cpp  FullBox.cpp  HDLR.cpp  HVC1.cpp  HVCC-Array-NALUnit.cpp  HVCC-Array.cpp  HVCC.cpp  IDAT.cpp  IINF.cpp  ILOC-Item-Extent.cpp  ILOC-Item.cpp  ILOC.cpp  INFE.cpp  IPCO.cpp  IPMA-Entry-Association.cpp  IPMA-Entry.cpp  IPMA.cpp  IREF.cpp  IROT.cpp  ISPE.cpp  ImageGrid.cpp  (+20 more)
VisualStudio/: All.vcxproj  ISOBMFF DLL v120xp.vcxproj  ISOBMFF DLL v120xp.vcxproj.filters  ISOBMFF DLL v140xp.vcxproj  ISOBMFF DLL v140xp.vcxproj.filters  ISOBMFF DLL v141xp.vcxproj  ISOBMFF DLL v142.vcxproj  ISOBMFF DLL v142.vcxproj.filters  ISOBMFF DLL v143.vcxproj  ISOBMFF DLL v143.vcxproj.filters  ISOBMFF DLLv120xp.vcxproj  ISOBMFF Static v120xp.vcxproj  ISOBMFF Static v140xp.vcxproj  ISOBMFF Static v140xp.vcxproj.filters  ISOBMFF Static v141xp.vcxproj  ISOBMFF Static v141xp.vcxproj.filters  ISOBMFF Static v142.vcxproj  ISOBMFF Static v142.vcxproj.filters  ISOBMFF Static v143.vcxproj  ISOBMFF Static v143.vcxproj.filters  ISOBMFF-Dump.vcxproj  ISOBMFF-Dump.vcxproj.filters
doc/: Makefile
fuzz/: AVC1_fuzzer.cpp  AVCC_fuzzer.cpp  CMakeLists.txt  CTTS_fuzzer.cpp  DREF_fuzzer.cpp  FTYP_fuzzer.cpp  HDLR_fuzzer.cpp  HVC1_fuzzer.cpp  HVCC_fuzzer.cpp  MDHD_fuzzer.cpp  META_fuzzer.cpp  MP4A_fuzzer.cpp  MVHD_fuzzer.cpp  Makefile  Parser_fuzzer.cpp  README.md  STSD_fuzzer.cpp  STSS_fuzzer.cpp  STTS_fuzzer.cpp  TKHD_fuzzer.cpp  URL_fuzzer.cpp  converter.py
fuzz/corpus/Parser_fuzzer/: leak-f70cd74741703d60f1880a8b18ca64b124e948d6
include/: AV01.hpp  AVC1.hpp  AVCC.hpp  BinaryDataStream.hpp  BinaryFileStream.hpp  BinaryStream.hpp  Box.hpp  CDSC.hpp  COLR.hpp  CTTS.hpp  Casts.hpp  Container.hpp  ContainerBox.hpp  DIMG.hpp  DREF.hpp  DisplayableObject.hpp  DisplayableObjectContainer.hpp  FRMA.hpp  FTYP.hpp  File.hpp  FullBox.hpp  HDLR.hpp  HVC1.hpp  HVCC.hpp  IINF.hpp  ILOC.hpp  INFE.hpp  IPCO.hpp  IPMA.hpp  IREF.hpp  IROT.hpp  ISOBMFF.hpp  ISPE.hpp  ImageGrid.hpp  MDHD.hpp  META.hpp  MP4A.hpp  MVHD.hpp  Macros.hpp  Matrix.hpp  (+14 more)
media/: IMG2.HEIC
src/: AV01.cpp  AVC1.cpp  AVCC-NALUnit.cpp  AVCC.cpp  BinaryDataStream.cpp  BinaryFileStream.cpp  BinaryStream.cpp  Box.cpp  CDSC.cpp  CMakeLists.txt  COLR.cpp  CTTS.cpp  Container.cpp  ContainerBox.cpp  DIMG.cpp  DREF.cpp  DisplayableObject.cpp  DisplayableObjectContainer.cpp  FRMA.cpp  FTYP.cpp  File.cpp  FullBox.cpp  HDLR.cpp  HVC1.cpp  HVCC-Array-NALUnit.cpp  HVCC-Array.cpp  HVCC.cpp  IINF.cpp  ILOC-Item-Extent.cpp  ILOC-Item.cpp  ILOC.cpp  INFE.cpp  IPCO.cpp  IPMA-Entry-Association.cpp  IPMA-Entry.cpp  IPMA.cpp  IREF.cpp  IROT.cpp  ISPE.cpp  ImageGrid.cpp  (+21 more)
test/: AVC1_unittest.cpp  AVCC_unittest.cpp  CMakeLists.txt  CTTS_unittest.cpp  DREF_unittest.cpp  FTYP_unittest.cpp  HDLR_unittest.cpp  HVC1_unittest.cpp  HVCC_unittest.cpp  MDHD_unittest.cpp  META_unittest.cpp  MP4A_unittest.cpp  MVHD_unittest.cpp  Parser.cpp  Parser_unittest.cpp  STSD_unittest.cpp  STSS_unittest.cpp  STTS_unittest.cpp  TKHD_unittest.cpp  URL_unittest.cpp
tools/: CMakeLists.txt  main.cpp
